tdf#148961 sd theme: add PPTX export for shape fill color effects

Which allows taking the fill color theme index from the model even in
case there are effects.

Previously effects meant reading from the grab-bag, and only the
no-effect case read the color theme index from the doc model.

Change-Id: Ib50c3128b971a388f14ad721ed7f73043916a736
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134208
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>